--- a/android/build.gradle
+++ b/android/build.gradle
@@ -62,7 +62,24 @@ dependencies {
     // ref:
     // https://github.com/facebook/react-native/blob/0.61-stable/template/android/app/build.gradle#L192
     //noinspection GradleDynamicVersion
+
+    testImplementation 'junit:junit:4.12'
+    testImplementation 'org.mockito:mockito-inline:2.28.2'
+
+    androidTestImplementation 'androidx.test:runner:1.2.0'
+    androidTestImplementation 'androidx.test:rules:1.2.0'
+    androidTestImplementation 'androidx.test.ext:junit:1.1.1'
+    androidTestImplementation 'org.mockito:mockito-android:2.28.2'
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
+
+    api 'androidx.exifinterface:exifinterface:1.0.0'
+    api 'androidx.lifecycle:lifecycle-common:2.1.0-alpha01'
+    api 'com.google.android.gms:play-services-tasks:17.0.0'
+    implementation 'androidx.annotation:annotation:1.1.0'
+    implementation 'com.google.code.gson:gson:2.8.6'
+
     implementation 'com.facebook.react:react-native:+'  // From node_modules
+    
 }
 
 def configureReactNativePom(def pom) {
